first implementation of day settings pages fixed some overflow issues

--- a/includes/style.css
+++ b/includes/style.css
@@ -9,6 +9,7 @@ html {
     margin: 0;
     box-sizing: border-box;
     font-family: "Roboto", sans-serif;
+    overflow-x: hidden;
 }
 
 body {
@@ -147,7 +148,7 @@ footer {
 
 nav .page-container {
     position: relative;
-    min-height: 75vh;
+    min-height: 65vh;
 }
 
 .content-wrap {
@@ -243,6 +244,8 @@ h3 {
     /* hide the menu above the screen by default */
     transform: translateX(-100%);
     transition: transform 0.2s ease;
+    overflow-y: auto;
+    scrollbar-gutter: auto;
 }
 
 .showNav {
@@ -510,6 +513,10 @@ td {
     margin: 0 auto;
     text-align: center;
     border: 0;
+}
+
+table {
+    overflow-x: scroll;
 }
 
 .date-field {
